--- a/wp/wp-content/themes/ue-theme/package.json
+++ b/wp/wp-content/themes/ue-theme/package.json
@@ -16,8 +16,9 @@
     "last 2 versions"
   ],
   "dependencies": {
-    "bootstrap": "^5.2.0",
     "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.10.3",
     "jquery": "^3.6.0"
   },
   "devDependencies": {
